creating custom bootstrap

--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -29,9 +29,10 @@
 }
 
 body {
-    font-family:BebasNeueLight;
+    font-family: LemonMilk;
     background-image: url("../img/grass.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    overflow-x: hidden;
 }
