--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -17,10 +17,11 @@
   font-family: Code;
   src: url("../fonts/CodeBold.otf") format("opentype"); }
 body {
-  font-family: BebasNeueLight;
+  font-family: LemonMilk;
   background-image: url("../img/grass.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  overflow-x: hidden; }
 
 /*# sourceMappingURL=App.css.map */
