--- a/client/src/scss/NavBar.scss
+++ b/client/src/scss/NavBar.scss
@@ -1,6 +1,8 @@
 .navbar-layer {
     background-color: snow;
-    font-size: 20px;
+    min-height: 10%;
+    max-height: 10%;
+    font-size: 28px;
     text-align: center;
     overflow: hidden;
 }
@@ -11,36 +13,34 @@
     text-decoration: none;
 }
 
+.logo-layer {
+    display: inline-block;
+    position: absolute;
+    left: 2%;
+    top: 0.35em;
+}
+
 .dropdown {
     display: none;
 }
 
-.no-nav {
+.dropdown-content {
     height: 95vh;
     width: 8em;
     position: fixed;
     z-index: 1;
     top: 2em;
-    right: 0;
+    right: 0%;
     background-color: snow;
     overflow-x: hidden;
     padding-top: 50px;
-    animation: slideOut 0.5s forwards linear;
-    -webkit-animation: slideOut 0.5s forwards linear;
+    animation: slideOut 0.3s forwards linear;
+    -webkit-animation: slideOut 0.3s forwards linear;
 }
 
 .show-nav {
-    height: 95vh;
-    width: 8em;
-    position: fixed;
-    z-index: 1;
-    top: 2em;
-    right: 0;
-    background-color: snow;
-    overflow-x: hidden;
-    padding-top: 50px;
-    animation: slideIn 0.5s forwards linear;
-    -webkit-animation: slideIn 0.5s forwards linear;
+    animation: slideIn 0.3s forwards linear;
+    -webkit-animation: slideIn 0.3s forwards linear;
 }
 
 @keyframes slideIn {
@@ -70,24 +70,24 @@
 @keyframes slideOut {
     0% {
         transform: translateX(0);
-        opacity:1;
+        opacity: 1;
     }
 
     100% {
         transform: translateX(100%);
-        opacity:0;
+        opacity: 0;
     }
 }
 
 @-webkit-keyframes slideOut {
     0% {
         transform: translateX(0);
-        opacity:1;
+        opacity: 1;
     }
 
     100% {
         transform: translateX(100%);
-        opacity:0;
+        opacity: 0;
     }
 }
 
