--- a/client/src/css/BTNav.css
+++ b/client/src/css/BTNav.css
@@ -4,4 +4,38 @@
 .dropdown-menu > li > a {
   float: right !important; }
 
+.navbar {
+  min-height: 60px !important; }
+
+.navbar-brand {
+  line-height: 30px !important; }
+
+.navbar-inverse {
+  border-color: white !important;
+  background-color: white !important;
+  background: linear-gradient(to right, black 0%, lightseagreen 80%) !important;
+  border-radius: 8px !important; }
+
+.navbar-nav > li > a {
+  line-height: 30px !important; }
+
+.navbar-inverse .navbar-brand, a {
+  color: white !important; }
+
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
+  background-color: black !important; }
+
+.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
+  background-color: #323232; }
+
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
+  background-color: transparent !important; }
+
+ul.dropdown-menu {
+  background: linear-gradient(to right, black 0%, lightseagreen 80%); }
+
+@media screen and (max-width: 767px) {
+  .navbar-nav .open .dropdown-menu {
+    background: transparent !important; } }
+
 /*# sourceMappingURL=BTNav.css.map */
