preload and carousel

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -24,4 +24,7 @@ body {
   background-attachment: fixed;
   overflow-x: hidden; }
 
+html {
+  scroll-behavior: smooth; }
+
 /*# sourceMappingURL=App.css.map */
