--- a/client/src/css/BTNav.css
+++ b/client/src/css/BTNav.css
@@ -4,20 +4,36 @@
 .dropdown-menu > li > a {
   float: right !important; }
 
+.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
+  opacity: 0.7 !important;
+  background-color: transparent !important; }
+
+.navbar-inverse .navbar-nav > li > a:hover {
+  opacity: 0.7 !important; }
+
 .navbar {
-  min-height: 60px !important; }
+  min-height: 80px !important;
+  position: relative !important;
+  width: 100% !important;
+  z-index: 5; }
 
 .navbar-brand {
-  line-height: 30px !important; }
+  line-height: 45px !important;
+  font-size: 30px !important;
+  padding-right: 0 !important; }
 
 .navbar-inverse {
   border-color: white !important;
   background-color: white !important;
   background: linear-gradient(to right, black 0%, lightseagreen 80%) !important;
-  border-radius: 8px !important; }
+  border-radius: 8px !important;
+  margin-bottom: 0 !important; }
+
+#basic-nav-dropdown {
+  display: none; }
 
 .navbar-nav > li > a {
-  line-height: 30px !important; }
+  line-height: 45px !important; }
 
 .navbar-inverse .navbar-brand, a {
   color: white !important; }
@@ -31,11 +47,23 @@
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
   background-color: transparent !important; }
 
+.navbar-toggle {
+  margin-top: 1.4em !important; }
+
 ul.dropdown-menu {
   background: linear-gradient(to right, black 0%, lightseagreen 80%); }
 
+.open > .dropdown-menu {
+  display: none; }
+
 @media screen and (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
-    background: transparent !important; } }
+    background: transparent !important; }
+
+  .mobile-hide {
+    display: none !important; }
+
+  .open > .dropdown-menu {
+    display: block; } }
 
 /*# sourceMappingURL=BTNav.css.map */
