--- a/client/src/css/Preloader.css
+++ b/client/src/css/Preloader.css
@@ -1,10 +1,10 @@
 .preload-layer {
-  background-color: black;
+  background-color: beige;
   color: white;
   height: 100%;
   width: 100%;
   position: fixed;
-  z-index: 3;
+  z-index: 10;
   pointer-events: none; }
 
 #preload-center {
@@ -19,35 +19,30 @@
   height: 200px;
   width: 200px;
   margin-top: -200px;
-  margin-left: -100px; }
+  margin-left: -100px;
+  text-align: center; }
 
 .img-absolute {
   min-height: 200px;
   min-width: 200px; }
 
 .layer-fade {
-  -webkit-animation: removeLayer 7s linear forwards;
-  animation: removeLayer 7s linear forwards; }
+  -webkit-animation: removeLayer 1s linear forwards;
+  animation: removeLayer 1s linear forwards; }
 
 @-webkit-keyframes removeLayer {
   0% {
-    opacity: 1;
-    transform: scale(1); }
-  25% {
-    opacity: 0;
-    transform: scale(1); }
+    transform: translateY(0); }
+  50% {
+    transform: translateY(-100%); }
   100% {
-    opacity: 0;
     transform: scale(0); } }
 @keyframes removeLayer {
   0% {
-    opacity: 1;
-    transform: scale(1); }
-  25% {
-    opacity: 0;
-    transform: scale(1); }
+    transform: translateY(0); }
+  50% {
+    transform: translateY(-100%); }
   100% {
-    opacity: 0;
     transform: scale(0); } }
 
 /*# sourceMappingURL=Preloader.css.map */
