--- a/client/src/scss/BTNav.scss
+++ b/client/src/scss/BTNav.scss
@@ -6,12 +6,26 @@
     float: right !important;
 }
 
+.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
+    opacity: 0.7 !important;
+    background-color: transparent !important;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover {
+    opacity: 0.7 !important;
+}
+
 .navbar {
-    min-height: 60px !important;
+    min-height: 80px !important;
+    position: relative !important;
+    width: 100% !important;
+    z-index: 5;
 }
 
 .navbar-brand {
-    line-height: 30px !important;
+    line-height: 45px !important;
+    font-size: 30px !important;
+    padding-right: 0 !important;
 }
 
 .navbar-inverse {
@@ -19,10 +33,15 @@
     background-color: white !important;
     background: linear-gradient(to right, black 0%, lightseagreen 80%) !important;
     border-radius: 8px !important;
+    margin-bottom: 0 !important;
+}
+
+#basic-nav-dropdown {
+    display: none;
 }
 
 .navbar-nav > li > a {
-    line-height: 30px !important;
+    line-height: 45px !important;
 }
 
 .navbar-inverse .navbar-brand, a {
@@ -41,12 +60,28 @@
     background-color: transparent !important;
 }
 
+.navbar-toggle {
+    margin-top: 1.4em !important;
+}
+
 ul.dropdown-menu {
     background: linear-gradient(to right, black 0%, lightseagreen 80%);
+}
+
+.open > .dropdown-menu {
+    display: none;
 }
 
 @media screen and (max-width: 767px) {
     .navbar-nav .open .dropdown-menu {
         background: transparent !important;
+    }
+
+    .mobile-hide {
+        display: none !important;
+    }
+
+    .open > .dropdown-menu {
+        display: block;
     }
 }
