--- a/client/src/css/BTNav.css
+++ b/client/src/css/BTNav.css
@@ -25,7 +25,7 @@
 .navbar-inverse {
   border-color: white !important;
   background-color: white !important;
-  background: linear-gradient(to right, black 0%, lightseagreen 80%) !important;
+  background: linear-gradient(to right, #035569 0%, #18a8a1 80%) !important;
   border-radius: 8px !important;
   margin-bottom: 0 !important; }
 
@@ -37,6 +37,9 @@
 
 .navbar-inverse .navbar-brand, a {
   color: white !important; }
+
+.navbar-inverse .navbar-brand, a:hover {
+  text-decoration: none; }
 
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
   background-color: black !important; }
@@ -55,6 +58,14 @@ ul.dropdown-menu {
 
 .open > .dropdown-menu {
   display: none; }
+
+.icon-block {
+  margin-right: 0.5em;
+  min-height: 40px;
+  max-height: 40px;
+  min-width: 40px;
+  max-width: 40px;
+  opacity: 0.9; }
 
 @media screen and (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
