--- a/client/src/css/Carousel.css
+++ b/client/src/css/Carousel.css
@@ -20,4 +20,4 @@
     max-height: 25em !important;
     min-height: 25em !important; } }
 
-/*# sourceMappingURL=Top.css.map */
+/*# sourceMappingURL=Carousel.css.map */
