--- a/client/src/scss/ExCall.scss
+++ b/client/src/scss/ExCall.scss
@@ -1,4 +1,10 @@
 .excall-layer {
     padding-top: 2em;
     padding-left: 1em;
+    text-align: center;
+}
+
+.photo-layer {
+    width: 50%;
+    height: auto;
 }
