--- a/client/src/css/ExCall.css
+++ b/client/src/css/ExCall.css
@@ -1,5 +1,10 @@
 .excall-layer {
   padding-top: 2em;
-  padding-left: 1em; }
+  padding-left: 1em;
+  text-align: center; }
+
+.photo-layer {
+  width: 50%;
+  height: auto; }
 
 /*# sourceMappingURL=ExCall.css.map */
