--- a/client/src/scss/BTNav.scss
+++ b/client/src/scss/BTNav.scss
@@ -31,7 +31,7 @@
 .navbar-inverse {
     border-color: white !important;
     background-color: white !important;
-    background: linear-gradient(to right, rgb(3, 85, 105) 0%, rgb(24, 168, 161) 80%) !important;
+    background: linear-gradient(to right, snow 40%, rgb(71, 255, 246) 100%) !important;
     border-radius: 8px !important;
     margin-bottom: 0 !important;
 }
@@ -45,11 +45,34 @@
 }
 
 .navbar-inverse .navbar-brand, a {
-    color: white !important;
+    color: black !important;
 }
 
-.navbar-inverse .navbar-brand, a:hover {
-    text-decoration: none;
+.hvr-ripple-out {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    text-decoration: none !important;
+}
+
+.hvr-ripple-out:before {
+    content: '';
+    position: absolute;
+    border: transparent solid 3px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.hvr-ripple-out:hover:before, .hvr-ripple-out:focus:before, .hvr-ripple-out:active:before {
+    -webkit-animation-name: ripple;
+    animation-name: ripple;
 }
 
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
@@ -77,12 +100,34 @@ ul.dropdown-menu {
 }
 
 .icon-block {
-    margin-right:0.5em;
+    margin-right: 0.5em;
     min-height: 40px;
     max-height: 40px;
     min-width: 40px;
     max-width: 40px;
     opacity: 0.9;
+}
+
+@-webkit-keyframes ripple {
+    100% {
+        top: -12px;
+        right: -12px;
+        bottom: -12px;
+        left: -12px;
+        opacity: 0;
+        border: white solid 3px;
+    }
+}
+
+@keyframes ripple {
+    100% {
+        top: -12px;
+        right: -12px;
+        bottom: -12px;
+        left: -12px;
+        opacity: 0;
+        border: white solid 3px;
+    }
 }
 
 @media screen and (max-width: 767px) {
