--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -29,7 +29,7 @@
 }
 
 body {
-    font-family: LemonMilk;
+    font-family: Code;
     background-image: url("../img/grass.jpg");
     background-size: cover;
     background-repeat: no-repeat;
