--- a/client/src/css/BTNav.css
+++ b/client/src/css/BTNav.css
@@ -25,7 +25,7 @@
 .navbar-inverse {
   border-color: white !important;
   background-color: white !important;
-  background: linear-gradient(to right, snow 40%, #47fff6 100%) !important;
+  background: linear-gradient(to right, black 40%, #000047 100%) !important;
   border-radius: 8px !important;
   margin-bottom: 0 !important; }
 
@@ -36,7 +36,7 @@
   line-height: 45px !important; }
 
 .navbar-inverse .navbar-brand, a {
-  color: black !important; }
+  color: snow !important; }
 
 .hvr-ripple-out {
   display: inline-block;
@@ -86,7 +86,7 @@ ul.dropdown-menu {
   max-height: 40px;
   min-width: 40px;
   max-width: 40px;
-  opacity: 0.9; }
+  opacity: 0.8; }
 
 @-webkit-keyframes ripple {
   100% {
