--- a/client/src/css/Preloader.css
+++ b/client/src/css/Preloader.css
@@ -48,8 +48,8 @@
   display: none; }
 
 .no-bar {
-  -webkit-animation: fadeOut 0.5s linear forwards;
-  animation: fadeOut 0.5s linear forwards; }
+  -webkit-animation: fadeOut 3s linear forwards;
+  animation: fadeOut 3s linear forwards; }
 
 @-webkit-keyframes removeLayer {
   0% {
@@ -57,6 +57,7 @@
   50% {
     transform: translateY(-100%); }
   100% {
+    transform: translateY(-100%);
     transform: scale(0); } }
 @keyframes removeLayer {
   0% {
@@ -64,25 +65,38 @@
   50% {
     transform: translateY(-100%); }
   100% {
+    transform: translateY(-100%);
     transform: scale(0); } }
 @-webkit-keyframes fadeIn {
   0% {
+    opacity: 0; }
+  49% {
+    opacity: 0; }
+  50% {
     opacity: 0; }
   100% {
     opacity: 1; } }
 @keyframes fadeIn {
   0% {
     opacity: 0; }
+  49% {
+    opacity: 0; }
+  50% {
+    opacity: 0; }
   100% {
     opacity: 1; } }
 @-webkit-keyframes fadeOut {
   0% {
     opacity: 1; }
+  10% {
+    opacity: 0; }
   100% {
     opacity: 0; } }
 @keyframes fadeOut {
   0% {
     opacity: 1; }
+  10% {
+    opacity: 0; }
   100% {
     opacity: 0; } }
 
