--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -57,4 +57,8 @@ body {
 html {
   scroll-behavior: smooth; }
 
+*:focus {
+  outline: 0 !important;
+  outline: none !important; }
+
 /*# sourceMappingURL=App.css.map */
