--- a/client/src/css/Dataset.css
+++ b/client/src/css/Dataset.css
@@ -13,8 +13,9 @@
   min-height: 300px !important; }
 
 .img-titles {
-  padding-bottom: 3em;
-  font-family: OswaldLight !important; }
+  padding-bottom: 4em;
+  font-family: OswaldLight !important;
+  max-height: 73px !important; }
 
 .title-block {
   padding-top: 1.25em;
@@ -27,14 +28,17 @@
 .artsy-block {
   border: transparent solid 6em; }
 
+.art-title {
+  padding-top: 2em !important; }
+
 .buffer-block {
-  padding-bottom: 20em !important; }
+  padding-bottom: 2em !important; }
 
 .top-arrow {
   position: relative !important;
   bottom: 0 !important;
   right: .5em !important;
-  padding-top: 5em !important; }
+  font-size: 25px !important; }
 
 .btn-default {
   color: black !important;
