--- a/client/src/css/Preloader.css
+++ b/client/src/css/Preloader.css
@@ -1,6 +1,5 @@
 .preload-layer {
   background-color: beige;
-  color: white;
   height: 100%;
   width: 100%;
   position: fixed;
@@ -18,9 +17,13 @@
   top: 50%;
   height: 200px;
   width: 200px;
-  margin-top: -200px;
+  margin-top: -100px;
   margin-left: -100px;
   text-align: center; }
+
+.preload-shadow {
+  padding: 15px;
+  box-shadow: 0 0 1px black; }
 
 .img-absolute {
   min-height: 200px;
@@ -38,9 +41,10 @@
   color: black;
   display: inline-block;
   position: absolute;
-  font-size: 24px;
-  top: -0.17em;
-  left: 1.9em;
+  font-size: 40px;
+  top: -0.8em;
+  right: -0.5em;
+  letter-spacing: 0.12em;
   -webkit-animation: fadeIn 1s linear forwards;
   animation: fadeIn 1s linear forwards; }
 
@@ -88,14 +92,14 @@
 @-webkit-keyframes fadeOut {
   0% {
     opacity: 1; }
-  10% {
+  20% {
     opacity: 0; }
   100% {
     opacity: 0; } }
 @keyframes fadeOut {
   0% {
     opacity: 1; }
-  10% {
+  20% {
     opacity: 0; }
   100% {
     opacity: 0; } }
