--- a/client/src/css/Carousel.css
+++ b/client/src/css/Carousel.css
@@ -19,7 +19,7 @@
   animation: none !important;
   color: white !important; }
 
-.carousel-inner > .item > img {
+.carousel-inner .item img {
   min-width: 100% !important;
   max-width: 100% !important;
   animation: imageZoom 60s ease infinite;
@@ -29,14 +29,14 @@
   0% {
     transform: scale(1); }
   50% {
-    transform: scale(1.1) translate(50px, 20px); }
+    transform: scale(1.3); }
   100% {
     transform: scale(1); } }
 @keyframes imageZoom {
   0% {
     transform: scale(1); }
   50% {
-    transform: scale(1.1) translate(50px, 20px); }
+    transform: scale(1.3); }
   100% {
     transform: scale(1); } }
 @media screen and (max-width: 1199px) {
