--- a/client/src/scss/Carousel.scss
+++ b/client/src/scss/Carousel.scss
@@ -23,7 +23,7 @@
     color: white !important;
 }
 
-.carousel-inner > .item > img {
+.carousel-inner .item img {
     min-width: 100% !important;
     max-width: 100% !important;
     animation: imageZoom 60s ease infinite;
@@ -36,7 +36,7 @@
     }
 
     50% {
-        transform: scale(1.1) translate(50px, 20px);
+        transform: scale(1.3);
     }
 
     100% {
@@ -50,7 +50,7 @@
     }
 
     50% {
-        transform: scale(1.1) translate(50px, 20px);
+        transform: scale(1.3);
     }
 
     100% {
