--- a/client/src/css/Preloader.css
+++ b/client/src/css/Preloader.css
@@ -57,20 +57,26 @@
 
 @-webkit-keyframes removeLayer {
   0% {
-    transform: translateY(0); }
+    transform: translateY(0);
+    opacity: 1; }
   50% {
-    transform: translateY(-100%); }
-  100% {
     transform: translateY(-100%);
-    transform: scale(0); } }
+    opacity: 1; }
+  60%, 100% {
+    transform: translateY(-100%);
+    opacity: 0;
+    display: none; } }
 @keyframes removeLayer {
   0% {
-    transform: translateY(0); }
+    transform: translateY(0);
+    opacity: 1; }
   50% {
-    transform: translateY(-100%); }
-  100% {
     transform: translateY(-100%);
-    transform: scale(0); } }
+    opacity: 1; }
+  60%, 100% {
+    transform: translateY(-100%);
+    opacity: 0;
+    display: none; } }
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0; }
