--- a/client/src/scss/Preloader.scss
+++ b/client/src/scss/Preloader.scss
@@ -68,30 +68,36 @@
 @-webkit-keyframes removeLayer {
     0% {
         transform: translateY(0);
+        opacity: 1;
     }
 
     50% {
         transform: translateY(-100%);
+        opacity: 1;
     }
 
-    100% {
+    60%, 100% {
         transform: translateY(-100%);
-        transform: scale(0);
+        opacity: 0;
+        display: none;
     }
 }
 
 @keyframes removeLayer {
     0% {
         transform: translateY(0);
+        opacity: 1;
     }
 
     50% {
         transform: translateY(-100%);
+        opacity: 1;
     }
 
-    100% {
+    60%, 100% {
         transform: translateY(-100%);
-        transform: scale(0);
+        opacity: 0;
+        display: none;
     }
 }
 
