d3.js and remodeled front

--- a/client/src/css/Dataset.css
+++ b/client/src/css/Dataset.css
@@ -1,6 +1,6 @@
 .dataset-layer {
   text-align: center;
-  padding-top: 3em; }
+  width: 100%; }
 
 .dataset-layer img {
   max-width: 230px;
@@ -17,13 +17,22 @@
   font-family: OswaldLight !important;
   max-height: 73px !important; }
 
+.img-blocks {
+  transition: transform 0.3s; }
+  .img-blocks:hover {
+    transform: scale(1.15);
+    box-shadow: 0 24px 88px -8px rgba(30, 30, 30, 0.352); }
+
 .title-block {
+  margin: 0;
   padding-top: 1.25em;
   padding-bottom: 1.25em;
   font-size: 50px;
   border-top: snow solid 2px;
   border-bottom: snow solid 2px;
-  background: linear-gradient(to right, transparent 30%, rgba(124, 124, 124, 0.089) 50%, transparent 70%) !important; }
+  background: rgba(124, 124, 124, 0.089); }
+  .title-block:hover {
+    color: black !important; }
 
 .artsy-block {
   border: transparent solid 6em; }
@@ -66,6 +75,7 @@
     border: black solid 6px; } }
 @media screen and (max-width: 500px) {
   .dataset-layer img {
+    display: inline-block;
     max-width: 130px !important;
     min-width: 130px !important;
     min-height: 130px !important;
