--- a/client/src/css/BTNav.css
+++ b/client/src/css/BTNav.css
@@ -9,11 +9,24 @@
   background-color: transparent !important; }
 
 .navbar-inverse .navbar-nav > li > a:hover {
-  opacity: 0.7 !important; }
+  border-color: white;
+  cursor: pointer;
+  color: #15c441; }
+
+.navbar-inverse .navbar-nav > li > a:hover::before {
+  opacity: 1;
+  background: white;
+  -webkit-transform: rotate3d(0, 0, 1, 0deg);
+  transform: rotate3d(0, 0, 1, 0deg);
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1); }
+
+.navbar-inverse .navbar-nav > li > a {
+  color: rgba(0, 0, 0, 0.7); }
 
 .navbar {
   min-height: 80px !important;
-  position: relative !important;
+  position: fixed !important;
   width: 100% !important;
   z-index: 5; }
 
@@ -21,58 +34,34 @@
   line-height: 45px !important;
   font-size: 30px !important;
   padding-right: 0 !important; }
+  .navbar-brand:hover {
+    color: #15c441 !important; }
 
 .navbar-inverse {
   border-color: white !important;
   background-color: white !important;
-  background: linear-gradient(to right, black 40%, #000047 100%) !important;
-  border-radius: 8px !important;
+  background: snow;
   margin-bottom: 0 !important; }
 
 #basic-nav-dropdown {
   display: none; }
 
 .navbar-nav > li > a {
-  line-height: 45px !important; }
-
-.navbar-inverse .navbar-brand, a {
-  color: snow !important; }
-
-.hvr-ripple-out {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  text-decoration: none !important; }
-
-.hvr-ripple-out:before {
-  content: '';
-  position: absolute;
-  border: transparent solid 3px;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s; }
-
-.hvr-ripple-out:hover:before, .hvr-ripple-out:focus:before, .hvr-ripple-out:active:before {
-  -webkit-animation-name: ripple;
-  animation-name: ripple; }
+  line-height: 45px !important;
+  color: black; }
 
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
   background-color: black !important; }
 
 .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
-  background-color: #323232; }
+  background-color: black; }
 
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
   background-color: transparent !important; }
 
 .navbar-toggle {
-  margin-top: 1.4em !important; }
+  margin-top: 1.4em !important;
+  background: rgba(0, 0, 0, 0.7); }
 
 .open > .dropdown-menu {
   display: none; }
@@ -84,25 +73,11 @@
   min-width: 40px;
   max-width: 40px; }
 
-@-webkit-keyframes ripple {
-  100% {
-    top: -12px;
-    right: -12px;
-    bottom: -12px;
-    left: -12px;
-    opacity: 0;
-    border: white solid 3px; } }
-@keyframes ripple {
-  100% {
-    top: -12px;
-    right: -12px;
-    bottom: -12px;
-    left: -12px;
-    opacity: 0;
-    border: white solid 3px; } }
 @media screen and (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
     background: transparent !important; }
+    .navbar-nav .open .dropdown-menu li > a:hover {
+      color: black !important; }
 
   .mobile-hide {
     display: none !important; }
