--- a/client/src/scss/BTNav.scss
+++ b/client/src/scss/BTNav.scss
@@ -12,12 +12,27 @@
 }
 
 .navbar-inverse .navbar-nav > li > a:hover {
-    opacity: 0.7 !important;
+    border-color: white;
+    cursor: pointer;
+    color: #15c441;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover::before {
+    opacity: 1;
+    background: white;
+    -webkit-transform: rotate3d(0, 0, 1, 0deg);
+    transform: rotate3d(0, 0, 1, 0deg);
+    -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+    transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .navbar {
     min-height: 80px !important;
-    position: relative !important;
+    position: fixed !important;
     width: 100% !important;
     z-index: 5;
 }
@@ -26,13 +41,16 @@
     line-height: 45px !important;
     font-size: 30px !important;
     padding-right: 0 !important;
+
+    &:hover {
+        color: #15c441 !important;
+    }
 }
 
 .navbar-inverse {
     border-color: white !important;
     background-color: white !important;
-    background: linear-gradient(to right, rgb(0, 0, 0) 40%, rgb(0, 0, 71) 100%) !important;
-    border-radius: 8px !important;
+    background: snow;
     margin-bottom: 0 !important;
 }
 
@@ -42,37 +60,7 @@
 
 .navbar-nav > li > a {
     line-height: 45px !important;
-}
-
-.navbar-inverse .navbar-brand, a {
-    color: snow !important;
-}
-
-.hvr-ripple-out {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    text-decoration: none !important;
-}
-
-.hvr-ripple-out:before {
-    content: '';
-    position: absolute;
-    border: transparent solid 3px;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-}
-
-.hvr-ripple-out:hover:before, .hvr-ripple-out:focus:before, .hvr-ripple-out:active:before {
-    -webkit-animation-name: ripple;
-    animation-name: ripple;
+    color: black;
 }
 
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
@@ -80,7 +68,7 @@
 }
 
 .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
-    background-color: rgb(50, 50, 50);
+    background-color: rgba(0, 0, 0, 1);
 }
 
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
@@ -89,6 +77,7 @@
 
 .navbar-toggle {
     margin-top: 1.4em !important;
+    background: rgba(0, 0, 0, 0.7);
 }
 
 .open > .dropdown-menu {
@@ -103,31 +92,13 @@
     max-width: 40px;
 }
 
-@-webkit-keyframes ripple {
-    100% {
-        top: -12px;
-        right: -12px;
-        bottom: -12px;
-        left: -12px;
-        opacity: 0;
-        border: white solid 3px;
-    }
-}
-
-@keyframes ripple {
-    100% {
-        top: -12px;
-        right: -12px;
-        bottom: -12px;
-        left: -12px;
-        opacity: 0;
-        border: white solid 3px;
-    }
-}
-
 @media screen and (max-width: 767px) {
     .navbar-nav .open .dropdown-menu {
         background: transparent !important;
+
+        li > a:hover {
+            color: black !important;
+        }
     }
 
     .mobile-hide {
