--- a/client/src/css/Preloader.css
+++ b/client/src/css/Preloader.css
@@ -15,15 +15,26 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  height: 200px;
-  width: 200px;
-  margin-top: -100px;
-  margin-left: -100px;
+  height: 400px;
+  width: 400px;
+  margin-top: -200px;
+  margin-left: -200px;
   text-align: center; }
 
 .preload-shadow {
   padding: 15px;
   box-shadow: 0 0 1px black; }
+
+.custom-bar {
+  width: 100%;
+  height: 50%;
+  z-index: 5; }
+
+.custom-text {
+  position: absolute;
+  left: 49%;
+  top: 20%;
+  font-size: 16px; }
 
 .img-absolute {
   min-height: 200px;
@@ -33,25 +44,38 @@
   -webkit-animation: removeLayer 1.2s linear forwards;
   animation: removeLayer 1.2s linear forwards; }
 
-.progress-bar {
-  background-color: #337ab7 !important;
-  transition: width 0s linear !important; }
-
 .loader {
   color: black;
   display: inline-block;
   position: absolute;
+  width: 100%;
+  height: 50%;
   font-size: 40px;
-  top: -0.8em;
-  right: -0.5em;
+  right: 0%;
   letter-spacing: 0.12em;
   -webkit-animation: fadeIn 1s linear forwards;
   animation: fadeIn 1s linear forwards; }
 
 .no-msg {
-  display: none; }
+  width: 100%;
+  height: 50%;
+  font-size: 40px;
+  letter-spacing: 0.12em;
+  position: absolute;
+  display: none;
+  top: 0%; }
 
 .no-bar {
+  width: 100%;
+  height: 50%;
+  -webkit-animation: fadeOut 3s linear forwards;
+  animation: fadeOut 3s linear forwards; }
+
+.no-text {
+  position: absolute;
+  left: 49%;
+  top: 20%;
+  font-size: 16px;
   -webkit-animation: fadeOut 3s linear forwards;
   animation: fadeOut 3s linear forwards; }
 
