error checking for API, minor style changes

--- a/client/src/css/BTNav.css
+++ b/client/src/css/BTNav.css
@@ -8,10 +8,17 @@
   opacity: 0.7 !important;
   background-color: transparent !important; }
 
+.navbar-inverse .navbar-nav > li > a {
+  transition: transform 0.3s ease;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  font-size: 20px !important; }
+
 .navbar-inverse .navbar-nav > li > a:hover {
   border-color: white;
   cursor: pointer;
-  color: #15c441; }
+  color: #15c441;
+  transform: scale(1.15); }
 
 .navbar-inverse .navbar-nav > li > a:hover::before {
   opacity: 1;
@@ -32,10 +39,14 @@
 
 .navbar-brand {
   line-height: 45px !important;
-  font-size: 30px !important;
-  padding-right: 0 !important; }
+  font-size: 45px !important;
+  padding-right: 0 !important;
+  transition: transform 0.3s ease;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden; }
   .navbar-brand:hover {
-    color: #15c441 !important; }
+    color: #15c441 !important;
+    transform: scale(1.15); }
 
 .navbar-inverse {
   border-color: white !important;
