--- a/client/src/css/Preloader.css
+++ b/client/src/css/Preloader.css
@@ -44,9 +44,8 @@
   -webkit-animation: removeLayer 1.2s linear forwards;
   animation: removeLayer 1.2s linear forwards; }
 
-.loader {
+.text-point {
   color: black;
-  display: inline-block;
   position: absolute;
   width: 100%;
   height: 50%;
@@ -55,15 +54,16 @@
   letter-spacing: 0.12em;
   -webkit-animation: fadeIn 1s linear forwards;
   animation: fadeIn 1s linear forwards; }
+  .text-point h3 {
+    position: absolute;
+    top: 35%;
+    right: 30%; }
+
+.loader {
+  display: inline-block; }
 
 .no-msg {
-  width: 100%;
-  height: 50%;
-  font-size: 40px;
-  letter-spacing: 0.12em;
-  position: absolute;
-  display: none;
-  top: 0%; }
+  display: none; }
 
 .no-bar {
   width: 100%;
