--- a/client/src/scss/Preloader.scss
+++ b/client/src/scss/Preloader.scss
@@ -1,10 +1,11 @@
 .preload-layer {
-    background-color: beige;
+    background: linear-gradient(to top right, rgb(255, 255, 157) 20%, rgb(72, 206, 72) 100%);
     height: 100%;
     width: 100%;
     position: fixed;
     z-index: 10;
     pointer-events: none;
+    cursor: none;
 }
 
 #preload-center {
