--- a/client/src/css/Preloader.css
+++ b/client/src/css/Preloader.css
@@ -1,11 +1,20 @@
 .preload-layer {
-  background: linear-gradient(to top right, #ffff9d 20%, #48ce48 100%);
   height: 100%;
   width: 100%;
   position: fixed;
   z-index: 10;
   pointer-events: none;
   cursor: none; }
+
+.preload-background {
+  background: linear-gradient(-45deg, #d13d11, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 400% 400%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  -webkit-animation: Gradient 30s linear infinite;
+  animation: Gradient 30s linear infinite; }
 
 #preload-center {
   width: 100%;
@@ -20,7 +29,8 @@
   width: 400px;
   margin-top: -200px;
   margin-left: -200px;
-  text-align: center; }
+  text-align: center;
+  z-index: 9; }
 
 .preload-shadow {
   padding: 15px;
@@ -61,7 +71,8 @@
     right: 30%; }
 
 .loader {
-  display: inline-block; }
+  display: inline-block;
+  background: rgba(255, 255, 255, 0.3); }
 
 .no-msg {
   display: none; }
@@ -134,5 +145,19 @@
     opacity: 0; }
   100% {
     opacity: 0; } }
+@keyframes Gradient {
+  0% {
+    background-position: 0% 0%; }
+  50% {
+    background-position: 100% 100%; }
+  100% {
+    background-position: 0% 0%; } }
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 0%; }
+  50% {
+    background-position: 100% 100%; }
+  100% {
+    background-position: 0% 0%; } }
 
 /*# sourceMappingURL=Preloader.css.map */
