--- a/client/src/scss/Dataset.scss
+++ b/client/src/scss/Dataset.scss
@@ -23,11 +23,12 @@
 }
 
 .static-img-layer {
-    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background: linear-gradient(-45deg, rgb(209, 61, 17), #E73C7E, #23A6D5, #23D5AB);
     background-size: 400% 400%;
     -webkit-animation: Gradient 5s ease infinite;
     animation: Gradient 5s ease infinite;
-    transition: transform 0.3s;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.3s, transform 0.3s;
     padding: 0.3em;
     margin: 0.5em;
     width: 20%;
@@ -64,7 +65,8 @@
 }
 
 .img-blocks {
-    transition: transform 0.3s;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.3s, transform 0.3s;
 
     &:hover {
         transform: scale(1.15);
