--- a/client/src/scss/Preloader.scss
+++ b/client/src/scss/Preloader.scss
@@ -1,11 +1,22 @@
 .preload-layer {
-    background: linear-gradient(to top right, rgb(255, 255, 157) 20%, rgb(72, 206, 72) 100%);
+    // background: linear-gradient(to top right, rgb(255, 255, 255) 20%, rgb(144, 228, 158) 60%, rgb(72, 206, 72) 100%);
     height: 100%;
     width: 100%;
     position: fixed;
     z-index: 10;
     pointer-events: none;
     cursor: none;
+}
+
+.preload-background {
+    background: linear-gradient(-45deg, rgb(209, 61, 17), #E73C7E, #23A6D5, #23D5AB);
+    background-size: 400% 400%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    -webkit-animation: Gradient 30s linear infinite;
+    animation: Gradient 30s linear infinite;
 }
 
 #preload-center {
@@ -23,6 +34,7 @@
     margin-top: -200px;
     margin-left: -200px;
     text-align: center;
+    z-index: 9;
 }
 
 .preload-shadow {
@@ -73,6 +85,7 @@
 
 .loader {
     display: inline-block;
+    background: rgba(255, 255, 255, 0.3);
 }
 
 .no-msg {
@@ -192,5 +205,33 @@
 
     100% {
         opacity: 0;
+    }
+}
+
+@keyframes Gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+
+    50% {
+        background-position: 100% 100%;
+    }
+
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+@-webkit-keyframes Gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+
+    50% {
+        background-position: 100% 100%;
+    }
+
+    100% {
+        background-position: 0% 0%;
     }
 }
